Добавление сортировок пузырьком, выбором и быстрой сортировки

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,8 @@ else()
             data_structures/stack.h data_structures/stack.cpp
             data_structures/linked_list.h data_structures/linked_list.cpp
             data_structures/binary_tree.h data_structures/binary_tree.cpp
-
+            data_structures/queue.h data_structures/queue.cpp
+            algorithms/sortings.hpp
         )
     endif()
 endif()
